--- a/DeadSimpleSpeechRecognition.ipynb
+++ b/DeadSimpleSpeechRecognition.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "def get_model():\n",
     "    model = Sequential()\n",
-    "    model.add(Conv2D(32, kernel_size=(2, 2), activation='relu', input_shape=(20, 11, 1)))\n",
+    "    model.add(Conv2D(32, kernel_size=(2, 2), activation='relu', input_shape=(feature_dim_1, feature_dim_2, channel)))\n",
     "    model.add(Conv2D(48, kernel_size=(2, 2), activation='relu'))\n",
     "    model.add(Conv2D(120, kernel_size=(2, 2), activation='relu'))\n",
     "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
